# Observability-OTEL

./: README.md  observability-dashboard.md  otel-collector-config.yaml  test_file.txt  test_observability.py
data-store/: Dockerfile  README.md  main.py  observability.py  pyproject.toml  schemas.py  telemetry.py
document-api/: Dockerfile  README.md  main.py  observability.py  pyproject.toml  telemetry.py
